# cloud-security

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_BAR.md  pyproject.toml
.github/workflows/: ci.yml  release-assets.yml  runtime-benchmarks.yml
docs/: AGENT_DATA_LAKE_FLOW.md  ARCHITECTURE.md  CANONICAL_SCHEMA.md  CI_WORKFLOW.md  COMPLIANCE_MAPPINGS.md  COVERAGE_MODEL.md  CREDENTIAL_PROVENANCE.md  DATA_FLOW.md  DATA_HANDLING.md  DEBUGGING.md  DEPENDENCY_HYGIENE_SKILL.md  DESIGN_DECISIONS.md  DIAGRAMS.md  ERROR_CODES.md  FRAMEWORK_COVERAGE.md  FRAMEWORK_MAPPINGS.md  HITL_POLICY.md  LOSSY_MAPPINGS.md  MCP_AUDIT_CONTRACT.md  NATIVE_VS_OCSF.md  NORMALIZATION_EXAMPLES.md  NORMALIZATION_REFERENCE.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNNER_CONTRACT.md  RUNTIME_ISOLATION.md  RUNTIME_PROFILES.md  SCHEMA_COVERAGE.md  SCHEMA_VERSIONING.md  SIEM_INDEX_GUIDE.md  SINK_CONTRACT.md  SKILL_CONTRACT.md  STATE_AND_TIMELINE_MODEL.md  STDERR_TELEMETRY_CONTRACT.md  SUPPLY_CHAIN.md  THREAT_MODEL.md  THREAT_MODEL_COVERAGE.md  TROUBLESHOOTING.md  USE_CASES.md  agent-integrations.md  (+1 more)
docs/benchmarks/: runtime-profiles-2026-04-16.json
docs/schemas/: stderr-telemetry.schema.json
examples/agents/: README.md  anthropic_sdk_security_agent.py  langgraph_security_graph.py  openai_sdk_security_agent.py
mcp-server/: README.md
mcp-server/src/: server.py  tool_registry.py
mcp-server/tests/: test_server.py  test_server_unit.py  test_tool_registry.py
packs/: README.md
packs/lateral-movement/: README.md  snowflake.sql
packs/privilege-escalation-k8s/: README.md  databricks.sql  snowflake.sql
runners/: README.md
runners/aws-s3-sqs-detect/: README.md  template.yaml
runners/azure-blob-eventgrid-detect/: README.md  requirements.txt  template.bicep
runners/gcp-gcs-pubsub-detect/: README.md  main.tf
scripts/: benchmark_runtime_profiles.py  check_runtime_profile_regressions.py  generate_framework_coverage_doc.py  generate_security_bar_matrix.py  run_mypy.sh  skill_validation_common.py  validate_deny_list_parity.py  validate_dependency_consistency.py  validate_framework_coverage.py  validate_ocsf_metadata.py  validate_safe_skill_bar.py  validate_skill_contract.py  validate_skill_count_consistency.py  validate_skill_integrity.py  validate_test_coverage.py
skills/: README.md
skills/_shared/: read_only_sql.py  remediation_verifier.py  runtime_telemetry.py
skills/container-security/: SKILL.md
skills/cspm-aws-cis-benchmark/: SKILL.md
skills/cspm-azure-cis-benchmark/: SKILL.md
skills/cspm-gcp-cis-benchmark/: SKILL.md
skills/detection-engineering/: OCSF_CONTRACT.md  README.md
skills/discover-environment/: SKILL.md
skills/gpu-cluster-security/: SKILL.md
skills/iam-departures-remediation/: SKILL.md  examples.md  reference.md
skills/k8s-security-benchmark/: SKILL.md
skills/model-serving-security/: SKILL.md
skills/vuln-remediation-pipeline/: SKILL.md
tests/integration/: test_azure_runner_template.py  test_gcp_runner_template.py  test_generate_security_bar_matrix.py  test_iam_departures_guardrails.py  test_k8s_container_escape_forensics_pipeline.py  test_k8s_pipeline.py  test_k8s_priv_esc_query_pack.py  (+4 more)
(+357 files in other folders)
