[project]
name = "cloud-security-skills"
version = "0.2.0"
description = "Cloud security skills collection — reusable security automation for AI agents"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Existing code uses long lines for audit log strings

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["skills"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# importlib mode lets multiple skills share basenames like `test_ingest.py`
# without the prepend-sys-path import collision that the default mode causes
# when `pytest skills/` is run from the repo root. Each matrix cell in CI
# still runs per-skill, but local top-level `pytest` now Just Works.
addopts = "--import-mode=importlib"
